# django-quill-editor

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.deploy  LICENSE  MANIFEST.in  Makefile  README.md  deploy.py  docker-compose-local.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
.deploy/: .env.production  docker-compose.yml  gunicorn.py  gunicorn_local.py  init.sh  quill.conf
.deploy/nginx/: cert.nginx  local.nginx  nginx.conf  production.nginx
.github/: release-drafter.yml
.github/workflows/: deploy.yml  release_drafter.yml
.scripts/: make_dockerfile.py
_playground/config/: __init__.py  backends.py  settings.py
_playground/posts/: admin.py  forms.py  tests.py  urls.py
_playground/posts/migrations/: 0001_initial.py
django_UEditor/: UEditor.py  config.py  fields.py  forms.py  widgets.py
django_UEditor/static/ueditor/: Gruntfile.js  README.md  changelog.md  editor_api.js  package.json  ueditor.config.js
django_UEditor/static/ueditor/_examples/: customPluginDemo.html  customToolbarDemo.html  index.html  jqueryCompleteDemo.html  multiDemo.html  multiEditorWithOneInstance.html  sectiondemo.html  setWidthHeightDemo.html  simpleDemo.html  submitFormDemo.html  uparsedemo.html
django_UEditor/static/ueditor/_src/: api.js
django_UEditor/static/ueditor/_src/adapter/: editor.js
django_UEditor/static/ueditor/_src/core/: Editor.js  EventBase.js  Range.js  browser.js  domUtils.js  filternode.js  filterword.js  htmlparser.js  node.js  utils.js
django_UEditor/static/ueditor/_src/plugins/: anchor.js  background.js  snapscreen.js  video.js
django_UEditor/static/ueditor/asp/: README.md
django_UEditor/static/ueditor/net/: README.md  controller.ashx
django_UEditor/static/ueditor/php/: Uploader.class.php
django_UEditor/templates/django_quill/: media.html  widget.html
django_quill/: config.py  fields.py  forms.py  quill.py  test_settings.py  widgets.py
django_quill/drf/: fields.py
django_quill/management/commands/: convert_to_quill.py
django_quill/static/django_quill/: django_quill.css  django_quill.js
django_quill/templates/django_quill/: media.html  widget.html
docs/: conf.py  index.rst
docs/pages/: change-toolbar-configs.md  image-uploads.md  migrating-to-quillfield.md  rest-framework.md  using-as-form.md  using-as-modelform.md  using-in-admin.md
playground/: django_quill
playground/config/: admin.py  apps.py  asgi.py  backends.py  baker.py  settings.py  urls.py  views.py  wsgi.py
playground/posts/: admin.py  apis.py  apps.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
playground/posts/migrations/: 0001_initial.py  0002_nonquillpost.py
playground/templates/: base.html  index.html
playground/templates/admin/: login_without_credentials.html
playground/templates/posts/: base_posts.html  quillpost.html  quillpost_detail.html  quillpost_form.html  quillpost_list.html
sample/: django_quill  requirements.txt
sample/config/: forms.py  settings.py  urls.py  views.py
sample/posts/: admin.py  forms.py  models.py  urls.py  views.py
sample/posts/migrations/: 0001_initial.py
sample/static/: style.css
sample/templates/: base.html  index.html
sample/templates/posts/: quillpost.html  quillpost_detail.html  quillpost_form.html  quillpost_list.html  quillpost_normal_form.html
testproject/: manage.py  pyproject.toml  start_development.sh
testproject/post/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
testproject/post/migrations/: 0001_initial.py  0002_quilldetail_quilldetail2_quillmaster.py
testproject/post/static/: style.css
testproject/post/templates/: index.html
testproject/post/templates/post/: base_posts.html  quillpost.html  quillpost_create.html  quillpost_detail.html  quillpost_form.html  quillpost_list.html  quillpost_normal_form.html
testproject/testproject/: asgi.py  baker.py  settings.py  urls.py  wsgi.py
(+7 files in other folders)
