[tool.poetry]
name = "django-quill-editor"
version = "0.1.0"
description = ""
authors = ["lhy <dev@lhy.kr>"]
packages = [
    { include = "django_quill" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.12"
django-extensions = "^3.1.5"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
model-bakery = "^1.3.3"

[tool.poetry.dev-dependencies]
# Test
pytest = "^6.2.5"
pytest-django = "^4.5.1"
pytest-cov = "^3.0.0"
coverage = "^6.2"
codecov = "^2.0.16"
tox = "^3.24.4"

# Deploy
twine = "^3.7.0"
setuptools = "^59.5.0"
notebook = "^6.4.6"

# Doc
Sphinx = "^4.3.1"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^1.0.0"
build = "^0.7.0"
wheel = "^0.37.0"

[build-system]
requires = [
    "poetry>=0.12",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"
