# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-quill-editor"
version = "0.1.36"
description = "Integrate Quill editor with Django project."
readme = "README.me"
authors = ["lhy <dev@lhy.kr>"]
license = "MIT"
repository = "https://github.com/LeeHanYeong/django-quill-editor"
homepage = "https://github.com/LeeHanYeong/django-quill-editor"
packages = [
    { include = "django_quill" },
]
classifiers=[
    "Framework :: Django",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-extensions = "^3.1.5"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
model-bakery = "^1.3.3"

[tool.poetry.dev-dependencies]
# Test
pytest = "^6.2.5"
pytest-django = "^4.5.1"
pytest-cov = "^3.0.0"
coverage = "^6.2"
codecov = "^2.0.16"
tox = "^3.24.4"

# Deploy
twine = "^3.7.0"
setuptools = "^59.5.0"
notebook = "^6.4.6"

# Doc
Sphinx = "^4.3.1"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^1.0.0"
build = "^0.7.0"
wheel = "^0.37.0"

[build-system]
requires = [
    "poetry>=0.12",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"
