[tool.poetry]
name = "django-quill-editor"
version = "0.1.0"
description = ""
authors = ["lhy <dev@lhy.kr>"]
packages = [
    { include = "django_quill" },
]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2"
django-extensions = "^3.1.5"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
model-bakery = "^1.3.3"

[tool.poetry.group.dev.dependencies]
# Test
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
coverage = "^6.2"
codecov = "^2.0.16"
tox = "^4.20.0"

# Deploy
twine = "^5.1.1"
setuptools = "^75.1.0"
notebook = "<8"

# Doc
Sphinx = "^4.3.1"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^1.0.0"
build = "^0.7.0"
wheel = "^0.37.0"

[tool.pytest.ini_options]
python_files = ["test*.py", "*_tests.py"]
DJANGO_SETTINGS_MODULE = "playground.config.settings"
norecursedirs = ["*/templates/*", "*/static/*", "*/migrations/*", "*/.media/*", "*/.static/*", ".git", "build/*", "dist/*"]
addopts = "--nomigrations --reuse-db"

[build-system]
requires = [
    "poetry>=0.12",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"
